cluster/staging/k8s/web.yml
apiVersion: v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 2
  selector:
    matchLabels:
      tier: web
  template:
    metadata:
      labels:
        tier: web
    spec:
      containers:
        image: moonlight8978/kube-demo-web:latest
        command:
          - bundle
          - exec
          - puma
        ports:

      volumes:
        - name: google-storage-key
