cluster/staging/k8s/deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  ports:
    - port: 27017
  selector:
    component: database
    environment: staging
  clusterIP: None

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      environment: staging
      component: database
  template:
    metadata:
      labels:
        component: database
        environment: staging
    spec:
      volumes:
        - name: database-storage
          persistentVolumeClaim:
            claimName: database-storage-claim
      containers:
        - name: database
          image: mongo:4.2.0-bionic
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: database-storage
              mountPath: /data/db
