cluster/staging/k8s/glusterfs.yml
apiVersion: v1
kind: Service
metadata:
  name: glusterfs-cluster
  namespace: staging
spec:
  ports:
    - port: 1

---
apiVersion: v1
kind: Endpoints
metadata:
  name: glusterfs-cluster
  namespace: staging
subsets:
  - addresses:
      - ip: 172.16.0.201
    ports:
      - port: 1
  - addresses:
      - ip: 172.16.0.202
    ports:
      - port: 1
