cluster/staging/k8s/redis.yml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    tier: redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
      protocol: TCP
  clusterIP: None

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  serviceName: redis
  replicas: 1
  selector:
    matchLabels:
      tier: redis
  template:
    metadata:
      labels:
        tier: redis
    spec:
      containers:
        - name: redis
          image: redis:5.0.7-alpine
          ports:
            - name: redis
              containerPort: 6379
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
