cluster/staging/k8s/storage.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: glusterfs-cluster
subsets:
  - addresses:
      - ip: 172.16.0.210
    ports:
      - port: 1
  - addresses:
      - ip: 172.16.0.220
    ports:
      - port: 1

---
apiVersion: v1
kind: Service
metadata:
  name: glusterfs-cluster
spec:
  ports:
    - port: 1
