cluster/staging/k8s/traefik-ingress.yml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-ingress

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-ingress
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: traefik-ingress
  template:
    metadata:
      labels:
        app.kubernetes.io/name: traefik-ingress
    spec:
      serviceAccountName: traefik-ingress-serviceaccount
      terminationGracePeriodSeconds: 60
      containers:
        - image: traefik:v2.0.1
          name: traefik-ingress-lb
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
            - name: admin
              containerPort: 8080
          args:
            - --providers.kubernetesingress=true
            - --api.dashboard=true
            - --ping=true
            - --api=true
          livenessProbe:
            exec:
              command:
                - traefik
                - healthcheck
                - --ping
            initialDelaySeconds: 10
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            exec:
              command:
                - traefik
                - healthcheck
                - --ping
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-admin
  namespace: kube-system
spec:
  selector:
    app.kubernetes.io/name: traefik-ingress
  ports:
    - name: admin
      port: 80
      targetPort: 8080
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress
  namespace: kube-system
spec:
  selector:
    app.kubernetes.io/name: traefik-ingress
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
